--- a/langbite/pom.xml
+++ b/langbite/pom.xml
@@ -9,18 +9,90 @@
 <javafx.version>21</javafx.version>
 <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
 </properties>
+
+
 <dependencies>
-<dependency>
-<groupId>org.openjfx</groupId>
-<artifactId>javafx-controls</artifactId>
-<version>${javafx.version}</version>
-</dependency>
-<dependency>
-<groupId>org.openjfx</groupId>
-<artifactId>javafx-fxml</artifactId>
-<version>${javafx.version}</version>
-</dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>${javafx.version}</version>
+            </dependency>
+
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>${javafx.version}</version>
+            </dependency>
+
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+        </dependency>
+
+
+
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.googlecode.soundlibs</groupId>
+            <artifactId>soundlibs</artifactId>
+            <version>1.4</version>
+            <type>pom</type>
+        </dependency>
+
+
+        <dependency>
+            <groupId>javazoom</groupId>
+            <artifactId>jlayer</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>archetypes</artifactId>
+            <version>2.27.3</version>
+            <type>pom</type>
+        </dependency>
+
+
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>polly</artifactId>
+            <version>2.27.3</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.1.0-alpha1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.1.0-alpha1</version>
+        </dependency>
+
+
 </dependencies>
+
+
 <build>
 <plugins>
 <plugin>
